# pyfgsea-TED

./: .gitignore  Dockerfile  Dockerfile.baselines  LICENSE  README.md  README_quickstart.md  RELEASE_MANIFEST.tsv  environment.baselines.yml  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
config/: scp1064_event_axes.yml  ted_claim_boundary_rules.yml  ted_gene_set_axes.yml  ted_negative_control_axes.yml  ted_preregistration_cards.tsv  ted_upgrade_benchmark_registry.tsv
docs/: CONVENTIONS.md  QUALITY.md  claim_ceiling.md  output_schema.md  pyfgsea_ted.md  reproducibility_modes.md  tutorial_generalization_panel.md  tutorial_gse271399.md  tutorial_zscape.md
figures/: figure1_source_data.tsv  figure2_source_data.tsv  figure3_source_data.tsv  figure4_source_data.tsv  figure5_source_data.tsv
pyfgsea/: __init__.py  api.py  bootstrap.py  calibration.py  design.py  diagnostics.py  discovery_score.py  event_drivers.py  event_graph.py  event_replication.py  leading_edge.py  phenotype_linked.py  plotting_utils.py  reliability.py  result.py  ted_developmental.py  ted_perturbation.py  trajectory.py  trajectory_alignment.py  trajectory_benchmark.py  trajectory_compare.py  trajectory_events.py  trajectory_fate.py  trajectory_grid.py  trajectory_modules.py  validation.py  wrapper.py
reports/: direct_external_baseline_docker_report.md  genome_biology_release_candidate_audit.tsv  genome_biology_release_candidate_status.md  gse157977_locked_validation_preregistration.md  reproducibility_check_report.md
reproducibility/: run_minimal_demo.py
(+186 files in other folders)
